src/tests/expand_fn/fail/unknown_fn.tj
module main() = ()
    n:
        b = rec<20>()
    until